--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   url_launcher: ^6.1.10
   path_provider: ^2.0.13
   open_file: ^3.2.1
+  intl: ^0.18.0
+  shared_preferences: ^2.0.20
 
 dev_dependencies:
   flutter_test:
