--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,14 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   flutter_secure_storage: ^8.0.0
   provider: ^6.0.1
-  url_launcher: ^6.1.10
+  url_launcher: ^6.0.3
   path_provider: ^2.0.13
   open_file: ^3.2.1
   intl: ^0.18.0
   shared_preferences: ^2.0.20
+  permission_handler: ^8.3.0
+
+
 
 dev_dependencies:
   flutter_lints: ^1.0.0
